--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: lightblue;
+  font-family: Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+h1 {
+  color: navy;
 }
